--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,7 @@
 Revision history for jslint4java.
 
 1.2
+    - Update to Jslint 2007-08-17.
     - Add a report() call to get at JSLINT.report().
 
 1.1 2007-07-30
