--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,7 @@
 Revision history for jslint4java.
 
 1.2
+    - Move antlib to be antlib:net.happygiraffe.jslint.
     - Update to Jslint 2007-10-20.
     - Add a report() call to get at JSLINT.report().
 
