--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Things to implement:
 
+* Allow Main.java to operate on stdin.
+
 * Provide an examples directory for the ant task.
 
 * An eclipse plugin, to flag up anything it finds as a warning in the Problems
