--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,10 @@
 Revision history for jslint4java.
 
+1.2.1 2008-09-07
+    - Recompile with Java 5.
+
 1.2 2008-09-07
+    - [INCOMPATIBILITY] Rewrite the ant task so that it always uses filesets.
     - [INCOMPATIBILITY] Rewrite the ant task so that it always uses filesets.
     - [INCOMPATIBILITY] Move antlib to be antlib:net.happygiraffe.jslint.
     - Update to JSLint 2008-09-04.
