Update maven todo items.

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,9 @@ Things to implement:
 
 * Add a maven2 plugin.
 ** And then add a hudson plugin.
+** Maven2 TODO:
+*** Add a module build.
+*** Add back antunit tests.
 
 * Add support for non-boolean parameters.
 
