--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,7 @@
 Revision history for jslint4java.
 
 1.3-SNAPSHOT
+    - Add support for the indent option.
     - Switch build to maven.
     - Update to JSLint 2009-06-02.
 
