--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,9 @@
 Revision history for jslint4java.
 
 1.3-SNAPSHOT
+    - [INCOMPATIBILITY] Rename package from net.happygiraffe.jslint to
+      com.googlecode.jslint4java.  This means that the antlib url is now
+      antlib:com.googlecode.jslint4java
     - Add support for the indent option.
     - Switch build to maven.
     - Update to JSLint 2009-06-12.
