--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,5 +1,10 @@
 Revision history for jslint4java.
 
+1.4
+    - issue 22: Correct line & column numbers to be 1-based.
+    - Add NetBeansResultFormatter (thanks, Ari Shamash!).
+    - Update to JSLint 2009-07-25.
+
 1.3 2009-07-23
     - [INCOMPATIBILITY] Rename package from net.happygiraffe.jslint to
       com.googlecode.jslint4java.  This means that the antlib url is now
