--- a/NEWS.txt
+++ b/NEWS.txt
@@ -5,7 +5,7 @@ Revision history for jslint4java.
     - issue 22: Correct line & column numbers to be 1-based.
     - issue 23: State total error count in build failure message.
     - issue 24: make output more like javac for easier NetBeans parsing.
-    - Add NetBeansResultFormatter (thanks, Ari Shamash!).
+      (thanks, Ari Shamash!)
     - Update to JSLint 2009-07-25.
 
 1.3 2009-07-23
