--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,5 +1,8 @@
 Revision history for jslint4java.
 
+1.3.2 2009-08-05
+    - Update to JSLint 2009-08-05.
+
 1.3.1 2009-07-30
     - issue 21: Emit full filename in ant errors.
     - issue 22: Correct line & column numbers to be 1-based.
