--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,7 @@
 Revision history for jslint4java.
 
-1.3.2 2009-08-05
+1.3.2 2009-10-27
+    - issue 18: add support for external jslint.js.
     - Update to JSLint 2009-10-04.
 
 1.3.1 2009-07-30
