--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,5 +1,9 @@
 Revision history for jslint4java.
 
+1.3.3-SNAPSHOT 2009-11-24
+    - Update to JSLint 2009-11-22
+      - Adds "devel" option.
+
 1.3.2 2009-11-12
     - issue 18: add support for external jslint.js.
     - issue 29: pretty up the docs some.
