--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,11 @@
 Revision history for jslint4java.
 
 1.3.4 2010-07-16
+    - Use JCommander for flag processing.
+      - This means that command line option parsing has changed
+        slightly.  You now have to say "--indent 2" instead of
+        "--indent=2"
+      - The minimum version of Java is now 6.
     - issue 36: add a JUnit XML formatter.
     - issue 26: add support for .data() call in JSLINT.
     - Update to JSLint 2010-07-14.
